--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version":2,
-    "builds":[{"src":"backend/server.js","use":"@vercel/node"}],
+    "builds":[{"src":"src/App.js","use":"@vercel/node"}],
     "routes":[
         {
             "src": "/(.*)",
-            "dest":"backend/server.js"
+            "dest":"src/App.js"
         }
     ]
 }
